# trophocell3D-abm

./: .gitignore  README.md
GUI/: ImageSave.cpp  ImageSave.h  SimpleView2DUI.cxx  SimpleView2DUI.h  SimpleView2DUI.ui  SimpleView3DUI.cxx  SimpleView3DUI.h  SimpleView3DUI.ui  global.cpp  global.h  graphs.cpp  graphs.h  icons.qrc  information.cpp  libtropho.h  log.h  main.cpp  mainwindow.cpp  mainwindow.h  misc.cpp  misc.h  misc.txt  myvtk.cpp  myvtk.h  params.cpp  params.h  plot.cpp  plot.h  profile.h  qmylabel.h  qvideooutput.cpp  qvideooutput.h  result_set.h  transfer.h  tropho3D_GUI.pro  tropho3D_GUI.ui
Rojan-build-cb/: archive.bat.txt  archive.mri  myvsvars32-vs10.bat  tropho3D-abm.cbp  tropho3D_main.f90
build-cb/: CMakeLists.txt
build-notes/: notes.docx  superlu_mt.lib
cyg-build-cb/: cyg-vsvars32-vs10.bat  tropho3D-abm.cbp  tropho3D_main.cbp
src/: FEmapper.f90  IL.f90  Mesh_Generate.f90  Winsock_c.f90  behaviour.f90  c_f_wrapper.c  chemokine.f90  clientc.c  diffuse.f90  diffuse_general.f90  diffuse_secretion.f90  fdlinsol.f90  fields.f90  fmotion.f90  global.f90  m_unista.f90  motility.f90  nbr.f90  nleq1.f90  pack.f90  par_zig_mod.f90  rkf45.f90  sparse.f90  sparsekit.f90  tcpc.c  tropho3D.f90  tropho3D_main.f90  tropho_main.f90  umf_solver.f90  unused.f90  unused2.f90
